fix styles (z-index for p)

--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ section.wrapper {
     background-color: #eedc50;
 }
 
-.phone-blue .top-speakerp {
+.phone-blue .top-speaker {
     background-color: #33b0af;
 }
 
@@ -170,6 +170,7 @@ section.wrapper {
     line-height: 24px;
     color: #010101;
     margin-bottom: 15px;
+    z-index: 5;
 }
 
 .phone-wrapper .subtitle abbr {
@@ -215,6 +216,7 @@ section.wrapper {
     line-height: 24px;
     color: #010101;
     margin-bottom: 15px;
+    z-index: 5;
 }
 
 .phone-wrapper .desc span {
@@ -234,8 +236,8 @@ section.wrapper {
     position: absolute;
     left: 0;
     top: 50%;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 39px;
     background-size: cover;
     background-image: url(../images/cube_icon.png);
     transform: translateY(-50%);
